--- a/lizard_ui/static/lizard_ui/lizard-bootstrap.less
+++ b/lizard_ui/static/lizard_ui/lizard-bootstrap.less
@@ -208,16 +208,15 @@ body {
     clear: left;
     font-size: @baseFontSize;
     line-height: @baseLineHeight;
-    margin-left: -50px;
-    margin-right: -50px;
-    padding-left: 50px;
-    padding-right: 50px;
     .padded-sidebar-item;
     font-weight: bold;
+    margin-right: -13px;
   }
   h2 {
     #gradient > .horizontal(lighten(@middle, 10%), @middle);
     border-bottom: 1px solid @middle;
+    margin-left: -13px;
+    padding-left: 13px;
   }
   h3, h4 {
     #gradient > .horizontal(lighten(@light, 10%), @light);
@@ -225,6 +224,25 @@ body {
   }
   h4 {
     font-weight: normal;
+  }
+}
+
+#sidebar {
+  h3 {
+    margin-left: -26px;
+    padding-left: 26px;
+  }
+  h4 {
+    margin-left: -39px;
+    padding-left: 39px;
+  }
+}
+
+#rightbar,
+#secondary-sidebar {
+  h3, h4 {
+    margin-left: -13px;
+    padding-left: 13px;
   }
 }
 
